--- a/Dockerfile_linux
+++ b/Dockerfile_linux
@@ -18,5 +18,6 @@ CMD ["./mvnw", "clean" , "package", "-Dmaven.test.skip"]
 
 FROM eclipse-temurin:17-jre as production
 EXPOSE 8080
+CMD ["tree"]
 COPY --from=build /app/target/PostgreSqlTest-0.0.1-SNAPSHOT.jar /PostgreSqlTest.jar
 CMD ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/PostgreSqlTest.jar"]
