--- a/Dockerfile_linux
+++ b/Dockerfile_linux
@@ -2,9 +2,11 @@
 
 FROM eclipse-temurin:17-jdk as base
 WORKDIR /app
+CMD ["/bin/mkdir", "/app"]
+CMD ["/bin/cd", "/app"]
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
+CMD ["./mvnw", "dependency:resolve"]
 COPY src ./src
 
 FROM base as test
@@ -14,8 +16,7 @@ FROM base as development
 CMD ["./mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=prod", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000'"]
 
 FROM base as build
-RUN ./mvnw clean package -Dmaven.test.skip
-
+CMD ["./mvnw", "clean" , "package", "-Dmaven.test.skip"]
 
 FROM eclipse-temurin:17-jre as production
 EXPOSE 8080
