--- a/Dockerfile_linux
+++ b/Dockerfile_linux
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1
 
 FROM eclipse-temurin:17-jdk as base
-WORKDIR /app
+#WORKDIR /app
 CMD ["/bin/mkdir", "/app"]
 CMD ["/bin/cd", "/app"]
 COPY .mvn/ .mvn
