--- a/Dockerfile_linux
+++ b/Dockerfile_linux
@@ -1,25 +1,29 @@
 # syntax=docker/dockerfile:1
 
 FROM eclipse-temurin:17-jdk as base
-#WORKDIR /app
-RUN mkdir -p /app
-RUN cd /app
+WORKDIR /app
 #CMD ["/bin/mkdir", "/app"]
 #CMD ["/bin/cd", "/app"]
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-CMD ["./mvnw", "dependency:resolve"]
-COPY src ./src
+#COPY .mvn/ .mvn
+#COPY mvnw pom.xml ./
+#CMD ["./mvnw", "dependency:resolve"]
+#COPY src ./src
+COPY .mvn/ /app/.mvn
+COPY mvnw pom.xml /app/
+CMD ["./app/mvnw", "dependency:resolve"]
+COPY src ./app/src
 
 FROM base as test
-CMD ["./mvnw", "test"]
+#CMD ["./mvnw", "test"]
+CMD ["./app/mvnw", "test"]
 
 FROM base as development
-CMD ["./mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=prod", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000'"]
+#CMD ["./mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=prod", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000'"]
+CMD ["./app/mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=prod", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000'"]
 
 FROM base as build
-CMD ["./mvnw", "clean" , "package", "-Dmaven.test.skip"]
-
+#CMD ["./mvnw", "clean" , "package", "-Dmaven.test.skip"]
+CMD ["./app/mvnw", "clean" , "package", "-Dmaven.test.skip"]
 FROM eclipse-temurin:17-jre as production
 EXPOSE 8080
 COPY --from=build /app/target/PostgreSqlTest-0.0.1-SNAPSHOT.jar /PostgreSqlTest.jar
