--- a/Dockerfile_linux
+++ b/Dockerfile_linux
@@ -1,7 +1,7 @@
 # syntax=docker/dockerfile:1
 
 FROM eclipse-temurin:17-jdk as base
-WORKDIR /app
+#WORKDIR /app
 #CMD ["/bin/mkdir", "/app"]
 #CMD ["/bin/cd", "/app"]
 #COPY .mvn/ .mvn
@@ -24,6 +24,7 @@ CMD ["./app/mvnw", "spring-boot:run", "-Dspring-boot.run.profiles=prod", "-Dspri
 FROM base as build
 #CMD ["./mvnw", "clean" , "package", "-Dmaven.test.skip"]
 CMD ["./app/mvnw", "clean" , "package", "-Dmaven.test.skip"]
+
 FROM eclipse-temurin:17-jre as production
 EXPOSE 8080
 COPY --from=build /app/target/PostgreSqlTest-0.0.1-SNAPSHOT.jar /PostgreSqlTest.jar
